# python

basics/: calc.py  datatypes.py  inputs.py  list.py  list_comprehension.py  string.py
fast_api/: pyproject.toml
fast_api/src/: main.py
fastapi_kong/: .dockerignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
fastapi_kong/app/: crud.py  database.py  main.py  models.py  schemas.py
fastapi_kong/kong/: kong.yml
helloproject/: calc.py  datatypes.py  for.py  if.py  inputs.py  tupple.py  while.py
initialise/: __init__.py  main.py
initialise/com/jay/utils/: calculate.py
numpy/: note.txt  np1.ipynb  np1a.ipynb  np2.ipynb  np3.ipynb  np4.ipynb
pandas/: note.txt  pd1.ipynb
